fix some wrapping and overflow issues on pre tags

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -305,6 +305,7 @@ h1, h2, h3 {
     border-bottom-right-radius: 0px;
     padding: 2px;
     padding-left: 10px;
+    overflow: hidden;
     @extend .secondary-a-4;
     color: black;
     * {
@@ -319,8 +320,13 @@ h1, h2, h3 {
     border-top: 0px;
   }
 
+  pre.wrap {
+    white-space: pre-wrap;
+    overflow: auto;
+  }
+
   pre {
-    overflow: scroll-x;
+    overflow-x: scroll;
     max-width: 100%;
     border: 1px solid $primary-5;
     color: white;
